# OOP_Lab3

./: CMakeLists.txt  example_coords.txt  main.cpp  test.cpp
include/: Array.hpp  Array.tpp  Figure.hpp  Octagon.hpp  Square.hpp  Triangle.hpp
src/: Array.cpp  Figure.cpp  Octagon.cpp  Square.cpp  Triangle.cpp
test/: array_test.cpp  figure_test.cpp  test.cpp
